compiler/testData/diagnostics/tests/annotations/unresolvedReferenceRange.kt
<!UNRESOLVED_REFERENCE!>@Ann<!> class A
<!UNRESOLVED_REFERENCE!>Ann<!> class B
<!UNRESOLVED_REFERENCE!>@Ann<!>(1) class C
